@@ -1,5 +1,6 @@
 2021-06-05 (12.22)
 	COMMON: Fixes 'Socket Client doesn't receive byte with value 13' #112
+	COMMON: Fixes TSAVE of arrays includes extra null character. #119
 
 2021-05-03 (12.22)
 	COMMON: Fix array access regression
